--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
 **/ranking_*
-!/json/**/ranking_*
+# !/json/**/ranking_*
 
 # Ignore game files except for UI
 /game/*/**
